# optionmatrix

./: .gitignore  AUTHORS  ChangeLog  Concept-index.html  Curses-optionmatrix.html  Documentation.html  Downloading-and-Installation.html  GNU-Free-Documentation-License.html  Graphical-Application-optionmatrix.html  HOWTO  Invoking-the-OptionMatrix-Programs.html  Makefile  Makefile.am  Makefile.in  Models-supported.html  NEWS  Overview.html  README  README.how_to_make_a_release  README.md  Reporting-bugs.html  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  index.html  indexNoSplit.html  make_builds.sh  make_tests.sh  make_tests_quantlib.sh  optionmatrix.epub  optionmatrix_frame.html  optionmatrix_toc_frame.html  typescript
doc/: Makefile  Makefile.am  Makefile.in  README  fdl.texi  optionmatrix.info  optionmatrix.texi  stamp-vti  version.texi
doc/html/: Makefile  Makefile.am  Makefile.in
doc/html/source_html/: ChangeLog.html  Makefile.am.html  Makefile.html  Makefile.in.html  README  WEBSITE  aclocal.m4  compile.html  config.h.html  config.h.in.html  config.log.html  config.status.html  configure.ac.html  configure.html  depcomp.html  install-sh.html  missing.html  test-driver.html
doc/html/source_html/autom4te.cache/: requests
doc/html/source_html/doc/: Makefile.am.html  Makefile.am~  Makefile.html  Makefile.in.html  README  epsf.tex.html  fdl.texi.html  mdate-sh.html  optionmatrix.texi.html  stamp-vti  texinfo.tex.html  version.texi.html
doc/html/source_html/icons/: optionmatrix.desktop  optionmatrix.desktop.html  optionmatrix_console.desktop  optionmatrix_console.desktop.html
doc/html/source_html/man/: Makefile.am.html  Makefile.html  Makefile.in.html  optionmatrix.1  optionmatrix_console.1
doc/html/source_html/src/: README
doc/html/source_html/utils/: apt-get.sh.html  push_to_web.sh.html  tab.sh.html  yum.sh.html  zypper.sh.html
doc/images/: 3.txt  CNDDrop.txt  CNDDropDown.txt  CUSTInput.txt  Calendar.txt  CalendarButton.txt  CalendarSpread.txt  ConsoleCategories.txt  ConsoleChain.txt  ConsoleFormat.txt  ConsoleInputs.txt  ConsoleSelect.txt  ConsoleWelcome.txt  CouponEditor.txt  CycleClosed.txt  CycleDropOpen.txt  DateEngine.txt  DateEngineProperties.txt  DateEngineSelected.txt  DisplayFormats.txt  Export.txt  Greeks.txt  Leg1.txt  Leg1Leg2.txt  LegControls.txt  ModelByAuthor.txt  ModelDropDownOpen.txt  ModelsList.txt  MonthAdjuster.txt  MonthToStrikes.txt  MonthsAcross.txt  MonthsToStrike.txt  OptionMatrix.txt  OptionMatrixCalendarDated.txt  OptionMatrixSpreads.txt  Precision.txt  PrefsSettings.txt  PriceInterestStandard.txt  RealTime.txt  SleepDelay.txt  (+7 more)
doc/optionmatrix.t2p/optionmatrix.t2d/version_test/: txiversion.out  txiversion.tex
man/: Makefile  Makefile.am  Makefile.in  optionmatrix.1  optionmatrix_console.1
src/common/: Makefile  Makefile.am  Makefile.in  QuantLib.h  README  args.cpp  checks.cpp  cumulative_norm.cpp  defaults.cpp  defs.h  distributions.cpp  environment.h  extern.h  finrecipes.h  futures.cpp  greeks.cpp  license.h  logger.cpp  main.h  metaoptions.h  misc.h  options_calls.cpp  options_puts.cpp  prototypes.h  sanity.cpp  termstructure.cpp  test.h  tickers.cpp  time.cpp
src/common/.deps/: liboptionmatrix_a-args.Po  liboptionmatrix_a-distributions.Po  liboptionmatrix_a-options_calls.Po  liboptionmatrix_a-options_puts.Po  liboptionmatrix_a-time.Po
src/common/abradford/: basicmodels.h  black_76.cpp  black_scholes.cpp  delta.cpp  future.cpp  merton_73.cpp  pre-BSM.cpp
src/common/abradford/.deps/: liboptionmatrix_a-future.Po  liboptionmatrix_a-pre-BSM.Po
src/common/spinsky/: binomial.cpp
src/common/spinsky/.deps/: liboptionmatrix_a-binomial.Po
src/curses/: Makefile  Makefile.am  Makefile.in  README  curses_calendar.cpp  curses_demo.cpp  curses_display.cpp  curses_include.h  curses_inputs.cpp  curses_main.cpp  curses_misc.cpp  curses_process.cpp  curses_prop.cpp
src/curses/.deps/: optionmatrix_console-curses_inputs.Po  optionmatrix_console-curses_process.Po
src/gtk/: Makefile  Makefile.am  Makefile.in  README  gtk_bonds.cpp  gtk_calendar.cpp  gtk_cashflow.cpp  gtk_checkbutton.cpp  gtk_combobox.cpp  gtk_dialog.cpp  gtk_display.cpp  gtk_extern.h  gtk_glade_xml.glade  gtk_glade_xml.h  gtk_icon.h  gtk_include.h  gtk_main.cpp  gtk_main.h  gtk_menu.cpp  gtk_radio.cpp  gtk_scale.cpp  gtk_spin.cpp  gtk_thread.cpp
src/gtk/.deps/: optionmatrix-gtk_calendar.Po  optionmatrix-gtk_cashflow.Po  optionmatrix-gtk_checkbutton.Po  optionmatrix-gtk_main.Po  optionmatrix-gtk_scale.Po  optionmatrix-gtk_thread.Po
src/models/financialrecipes/examples/: Makefile  Makefile.am  Makefile.in  examples_alternative_formulas.cc  examples_approximations.cc  examples_average_and_lookback_options.cc  examples_binomial.cc  examples_binomial_approximations.cc  examples_binomial_term_structure_models.cc  examples_black_scholes.cc  examples_black_scholes_extensions.cc  examples_bond_flat_term_structure.cc  examples_bond_options.cc  examples_credit_risk.cc  examples_finite_differences.cc  examples_forwards_futures.cc  examples_generic_binomial.cc  examples_implicit_finite_diff_itpp.cc  examples_implicit_finite_diff_newmat.cc  examples_interest_rate_trees_gbm.cc  examples_interest_rate_trees_ho_lee.cc  examples_mean_variance_cxx_itpp.cc  examples_mean_variance_cxx_newmat.cc  examples_normal_distribution.cc  examples_present_value.cc  examples_simulation.cc  examples_term_structure.cc  examples_term_structure_derivatives.cc  examples_term_structure_model.cc  examples_trinomial.cc  examples_warrants.cc  prototypes.h  run_all_examples.cc
src/models/metaoptions/src/: AmericanExchangeOption.c  AssetOrNothing.c  BAWAmericanApprox.c  BAWbisection.c  BSAmericanApprox.c  BSbisection.c  BarrierBinominal.c  BinaryBarrier.c  CRRBinominal.c  CashOrNothing.c  ComplexChooser.c  ConvertibleBond.c  DiscreteAdjustedBarrier.c  DoubleBarrier.c  EquityLinkedFXO.c  EuropeanExchangeOption.c  ExchangeExchangeOption.c  Executive.c  ExtendibleWriter.c  ExtremeSpreadOption.c  FixedStrikeLookback.c  FloatingStrikeLookback.c  ForEquOptInDomCur.c  (+52 more)
(+1531 files in other folders)
