noinst_PROGRAMS = run_all_examples

TESTS = run_all_examples

run_all_examples_SOURCES = \
examples_alternative_formulas.cc\
examples_approximations.cc\
examples_average_and_lookback_options.cc\
examples_binomial_approximations.cc\
examples_binomial.cc\
examples_binomial_term_structure_models.cc\
examples_black_scholes.cc\
examples_black_scholes_extensions.cc\
examples_bond_options.cc\
examples_bond_flat_term_structure.cc\
examples_credit_risk.cc\
examples_finite_differences.cc\
examples_forwards_futures.cc\
examples_generic_binomial.cc\
examples_implicit_finite_diff_itpp.cc\
examples_implicit_finite_diff_newmat.cc\
examples_interest_rate_trees_gbm.cc\
examples_interest_rate_trees_ho_lee.cc\
examples_mean_variance_cxx_itpp.cc\
examples_mean_variance_cxx_newmat.cc\
examples_normal_distribution.cc\
examples_present_value.cc\
examples_simulation.cc\
examples_term_structure.cc\
examples_term_structure_derivatives.cc\
examples_term_structure_model.cc\
examples_trinomial.cc\
examples_warrants.cc\
prototypes.h\
run_all_examples.cc

run_all_examples_CPPFLAGS = -I$(top_srcdir)/src/models/financialrecipes/src
run_all_examples_LDADD = ../src/librecipes.a
